--- a/wiki/relatedWork.wiki
+++ b/wiki/relatedWork.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary The following section deals with related work of our research.
 
 = Related Work =
 
